force-app/main/default/objects/PricebookEntry/fields/Modality_Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Modality_Pricebook_Entry_ID__c</fullName>
    <externalId>true</externalId>
    <label>Modality Pricebook Entry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>