force-app/main/default/objects/PricebookEntry/fields/Product_Existing_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Existing_Service__c</fullName>
    <formula>Product2.Existing_Service_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Existing Service</label>
    <type>Checkbox</type>
</CustomField>