force-app/main/default/objects/PricebookEntry/fields/Product_Min_Commitment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Product_Min_Commitment_Eligible__c</fullName>
    <formula>Product2.Min_Commitment_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Min Commitment Eligible</label>
    <type>Checkbox</type>
</CustomField>