force-app/main/default/objects/PricebookEntry/fields/Product_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_RecordType_Name__c</fullName>
    <description>Stores the associated product&#39;s record type name</description>
    <formula>Product2.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product&#39;s RecordType Name</label>
    <type>Text</type>
</CustomField>