force-app/main/default/objects/PricebookEntry/fields/RT_Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Price_Book_Entry_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Price Book Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>